--- a/winlogbeats/winlogbeat.yml
+++ b/winlogbeats/winlogbeat.yml
@@ -1,3 +1,23 @@
+###################### Winlogbeat Configuration Example ########################
+
+# This file is an example configuration file highlighting only the most common
+# options. The winlogbeat.reference2.yml file from the same directory contains
+# all the supported options with more comments. You can use it as a reference.
+#
+# You can find the full configuration reference here:
+# https://www.elastic.co/guide/en/beats/winlogbeat/index.html
+
+# ======================== Winlogbeat specific options =========================
+
+# event_logs specifies a list of event logs to monitor as well as any
+# accompanying options. The YAML data type of event_logs is a list of
+# dictionaries.
+#
+# The supported keys are name (required), tags, fields, fields_under_root,
+# forwarded, ignore_older, level, event_id, provider, and include_xml. Please
+# visit the documentation for the complete details of each option.
+# https://go.es.io/WinlogbeatConfig
+
 winlogbeat.event_logs:
   - name: Application
     ignore_older: 72h
@@ -57,24 +77,30 @@ winlogbeat.event_logs:
           lang: javascript
           id: powershell
           file: ${path.home}/module/powershell/config/winlogbeat-powershell.js
-
 # ====================== Elasticsearch template settings =======================
+
 setup.template.settings:
   index.number_of_shards: 1
+  #index.codec: best_compression
+  #_source.enabled: false
+
 # ================================== Outputs ===================================
+
 # Configure what output to use when sending the data collected by the beat.
+
 # ---------------------------- Elasticsearch Output ----------------------------
-# output.elasticsearch:
-# Port:5044 \/ - /\(Port:9200)
+#output.elasticsearch:
 output.logstash:
-# Change localhost to the target Server
   hosts: ["localhost:5044"]
-# api_key: Part1:Part2
-# If you are using SSL / HTTPS, you will have to enable the below area and make sure the crt is there.
+  # or 9200 for ES Kibana
+# api_key: ha11qnoBwx_v_HNwVboD:Ei9t357HRLSxZlgqfJZ-PA
 # ssl.certificate_authorities:
-# - ${path.home}/ca.crt
+# - C:\winbeatlog7-13\ca.crt
+
 # ================================= Processors =================================
 processors:
   - add_host_metadata:
       when.not.contains.tags: forwarded
   - add_cloud_metadata: ~
+
+
